--- a/css/styles.css
+++ b/css/styles.css
@@ -82,8 +82,6 @@ img {
     justify-content: center;
 }
 
-
-
 /** --------------HEADER----------------- */
 
 .header-logo {
@@ -112,7 +110,6 @@ img {
 
 .header-menu-link { 
     padding-top: 24px;
-    padding-bottom: 24px;
     display:inline-block;
 }
 
@@ -145,11 +142,15 @@ img {
 .header-menu-link:hover,
 .header-menu-link:focus {
     color: #404BBF;
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-duration: 250ms ;
 }
 
 .header-menu-link:active {
     color: #404BBF;
     text-decoration: underline;
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-duration: 250ms ;
 }
 
 
@@ -166,6 +167,8 @@ img {
 .header-address-link:focus {
     color:  #404BBF;
     font-style: normal;
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-duration: 250ms ;
 }
 
 .advantage-group {
@@ -183,6 +186,7 @@ img {
     flex-basis: calc((100% - 3 * 24px) / 4);
     gap: 24px;
     align-items: center;
+    
 }
 
 .container-portf {
@@ -198,10 +202,17 @@ img {
 /** --------------HERO----------------- */
 
 .hero {
-    background:#2E2F42;
+    background-color: rgba(46, 47, 66, 0.70);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70) 0% ,rgba(46, 47, 66, 0.70)), 
+    url(../images/img-people-office-1.jpg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    /* background:#2E2F42; */
     padding-top: 188px;
     padding-bottom: 188px;  
 }
+
 
 .hero-title {
     color: #FFF;
@@ -239,6 +250,8 @@ img {
 .hero-btn:hover,
 .hero-btn:focus {
     background:  #404BBF;
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-duration: 250ms ;
 }
 
 
@@ -256,9 +269,29 @@ img {
     overflow: hidden;
 }
 
+.container-card-advantage {
+    display: flex;
+    gap: 24px;
+}
+
 .advantage {
     padding: 120px 0;
 }
+
+
+.card-container-adv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    width: 264px;
+    height: 112px;
+    border-radius: 4px;
+    border: 1px solid  #8E8F99;
+    background:  #F4F4FD;
+    margin-bottom: 8px;
+}
+
 
 /** --------------TEAM----------------- */
 
@@ -275,20 +308,52 @@ img {
 
 .our-team-card {
     background: #FFF;
-    border-radius: 0px 0px 4px 4px; 
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);    
 }
 
 .our-team-item {
-    /* padding-top: 32px; */
     margin-bottom: 8px;
     text-align: center; 
+}
+
+.our-team-text {
+    margin-bottom: 8px;
 }
 
 .little-container-team {
     padding-top: 32px;
     padding-bottom: 32px;
     text-align: center;
+    max-width: 232px;
+    margin: 0 auto;
+    
 }
+
+.our-team-icon {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.our-team-icon-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: #4D5AE5; 
+    border-radius: 50%;
+}
+
+.our-team-icon-list:hover, 
+.our-team-icon-list:focus {
+    background-color: #404BBF;
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-duration: 250ms ;
+}
+
+
 
 /** --------------Portfplio---------------- */
 
@@ -302,10 +367,51 @@ img {
     margin-bottom: 72px;
 }
 
+.cover-card {
+    position: relative;
+    overflow: hidden;
+}
+
+.our-portfolio-card{
+    position: relative;
+}
+
 .our-portfolio-item {
     margin-bottom: 8px;
 }
 
+.cover-text-portfolio {
+    color:  #fdf4f5;
+}
+
+.our-portfolio-card:hover .cover-portfolio-card {
+    transform: translateY(0%);
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-duration: 250ms ;
+}
+
+.our-portfolio-card:hover  .small-container {
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-duration: 250ms ;
+}
+
+.cover-portfolio-card {
+    position: absolute;
+    display: flex;
+    top: 0;
+    background-color: #4D5AE5;
+    height: 100%;
+    max-width: 360px;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 40px;
+    transform: translateY(100%);
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-duration: 250ms ;
+
+}
 
 .small-container {
     border-bottom: 1px solid  #E7E9FC;
@@ -347,8 +453,68 @@ img {
     margin-bottom: 16px;
 }
 
-.span {
-    color: #4D5AE5;
-
+.footer-socal-list {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
 }
 
+.footer-socal-icon-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: #4D5AE5; 
+    border-radius: 50%;
+}
+
+.footer-socal-icon-item:hover, 
+.footer-socal-icon-item:focus {
+    background-color: #31D0AA;
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-duration: 250ms ;
+}
+
+.container-social-footer {
+    display: inline-flex;
+    flex-direction: column;
+}
+
+.footer-text-social {
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.50; 
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+.small-container-footer {
+    display: inline-flex;
+    flex-direction: column;
+    margin-right: 120px;
+}
+
+.span {
+    color: #4D5AE5;
+}
+
+.header-menu-link::after {
+    content: "";
+    display: block;
+    width: 0%;
+    height: 4px;
+    background-color: #404BBF;
+    border-radius: 2px; 
+    margin-top: 20px;
+}
+
+.header-menu-item.active .header-menu-link::after {
+    width: 100%;
+} 
+
+.header-menu-item.active .header-menu-link {
+    color: #404BBF;
+}
