--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,7 @@ img {
 .container-header {
     display: flex;
     border-bottom: 1px solid  #E7E9FC;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); 
 } 
 
 .container-hero {
@@ -137,20 +138,18 @@ img {
     font-weight: 500;
     line-height: 1.50;
     letter-spacing: 0.02em;
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-duration: 250ms;
 }
 
 .header-menu-link:hover,
 .header-menu-link:focus {
     color: #404BBF;
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-duration: 250ms ;
 }
 
 .header-menu-link:active {
     color: #404BBF;
     text-decoration: underline;
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-duration: 250ms ;
 }
 
 
@@ -161,14 +160,14 @@ img {
     line-height: 1.50;
     letter-spacing: 0.02em;
     font-style: normal;
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-duration: 250ms;
 }
 
 .header-address-link:hover,
 .header-address-link:focus {
     color:  #404BBF;
     font-style: normal;
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-duration: 250ms ;
 }
 
 .advantage-group {
@@ -202,15 +201,18 @@ img {
 /** --------------HERO----------------- */
 
 .hero {
+    max-width: 1440px; 
+    margin: 0 auto;
     background-color: rgba(46, 47, 66, 0.70);
-    background-image: linear-gradient(rgba(46, 47, 66, 0.70) 0% ,rgba(46, 47, 66, 0.70)), 
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
     url(../images/img-people-office-1.jpg.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     /* background:#2E2F42; */
     padding-top: 188px;
-    padding-bottom: 188px;  
+    padding-bottom: 188px;
+    
 }
 
 
@@ -244,14 +246,13 @@ img {
     min-width: 169px;
     margin: 0 auto; 
     margin-top: 59px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-duration: 250ms;
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
     background:  #404BBF;
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-duration: 250ms ;
 }
 
 
@@ -342,18 +343,29 @@ img {
     align-items: center;
     width: 40px;
     height: 40px;
-    background-color: #4D5AE5; 
-    border-radius: 50%;
+    
 }
 
-.our-team-icon-list:hover, 
-.our-team-icon-list:focus {
+.our-team-icon-link:hover, 
+.our-team-icon-link:focus {
     background-color: #404BBF;
+}
+
+.our-team-icon-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4D5AE5; 
+    border-radius: 50%;
     transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
     transition-duration: 250ms ;
 }
 
-
+.link-color {
+    fill: #f4f4fd;
+}
 
 /** --------------Portfplio---------------- */
 
