--- a/css/styles.css
+++ b/css/styles.css
@@ -138,8 +138,7 @@ img {
     font-weight: 500;
     line-height: 1.50;
     letter-spacing: 0.02em;
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-duration: 250ms;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link:hover,
@@ -160,8 +159,7 @@ img {
     line-height: 1.50;
     letter-spacing: 0.02em;
     font-style: normal;
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-duration: 250ms;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address-link:hover,
@@ -246,8 +244,7 @@ img {
     min-width: 169px;
     margin: 0 auto; 
     margin-top: 59px;
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-duration: 250ms;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -343,8 +340,7 @@ img {
     align-items: center;
     width: 40px;
     height: 40px;
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-duration: 250ms ;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .our-team-icon-link:hover, 
@@ -482,13 +478,12 @@ img {
     height: 40px;
     background-color: #4D5AE5; 
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-socal-icon-item:hover, 
 .footer-socal-icon-item:focus {
     background-color: #31D0AA;
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-duration: 250ms ;
 }
 
 .container-social-footer {
