--- a/css/styles.css
+++ b/css/styles.css
@@ -186,7 +186,7 @@ img {
     
 }
 
-.container-portf {
+.container-portf { 
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -195,6 +195,9 @@ img {
     flex-basis: calc((100% - 2 * 24px) / 3);
 }
 
+.container-portf:hover { 
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
 
 /** --------------HERO----------------- */
 
@@ -340,7 +343,6 @@ img {
     align-items: center;
     width: 40px;
     height: 40px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .our-team-icon-link:hover, 
@@ -356,6 +358,7 @@ img {
     height: 100%;
     background-color: #4D5AE5; 
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-color {
@@ -398,12 +401,9 @@ img {
     
 }
 
-.container-portf {
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
+
 
 .our-portfolio-card:hover  .small-container {
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
     transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
     transition-duration: 250ms ;
 }
