--- a/css/styles.css
+++ b/css/styles.css
@@ -195,9 +195,12 @@ img {
     flex-basis: calc((100% - 2 * 24px) / 3);
 }
 
-.container-portf:hover { 
+.our-portfolio-card:hover { 
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
+
 
 /** --------------HERO----------------- */
 
@@ -384,8 +387,6 @@ img {
 
 .our-portfolio-card{
     position: relative;
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-duration: 250ms;
 }
 
 .our-portfolio-item {
@@ -393,34 +394,29 @@ img {
 }
 
 .cover-text-portfolio {
-    color:  #fdf4f5;
+    position: absolute; 
+    top: 0; 
+    font-size: 16px;
+    line-height: 1.5; 
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px; 
+    background-color: #4d5ae5;
+    height: 100%; 
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-.our-portfolio-card:hover .cover-portfolio-card { 
+.our-portfolio-card:hover .cover-text-portfolio { 
     transform: translateY(0%);
-    
-}
+} 
 
 
-
-.our-portfolio-card:hover  .small-container {
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-duration: 250ms ;
-}
 
 .cover-portfolio-card {
-    position: absolute;
     display: flex;
-    top: 0;
-    background-color: #4D5AE5;
-    height: 100%;
     max-width: 360px;
-    padding-left: 32px;
-    padding-right: 32px;
-    padding-top: 40px;
-    transform: translateY(100%);
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-duration: 250ms ;
 
 }
 
