--- a/css/styles.css
+++ b/css/styles.css
@@ -437,6 +437,11 @@ img {
     padding-bottom: 100px;
 }
 
+.container-footer {
+    display: flex; 
+    align-items: baseline;
+}
+
 .footer-text {
     color:  #F4F4FD;
     font-family: Roboto;
@@ -478,8 +483,21 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-socal-icon-item:hover, 
-.footer-socal-icon-item:focus {
+
+.footer-icon-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5; 
+    border-radius: 50%;
+    
+
+}
+
+.footer-icon-link:hover, 
+.footer-icon-link:focus {
     background-color: #31D0AA;
 }
 
@@ -506,6 +524,10 @@ img {
 
 .span {
     color: #4D5AE5;
+}
+
+.icon-sv{
+    fill: #f4f4fd;
 }
 
 .header-menu-link::after {
