--- a/css/styles.css
+++ b/css/styles.css
@@ -109,21 +109,13 @@ img {
     justify-content: space-between;
 }
 
-.header-menu-link { 
-    padding-top: 24px;
-    display:inline-block;
-}
+
 
 .header-address-list {
     display: flex;
     gap: 40px;
 }
 
-.header-address-link {
-    padding-top: 24px;
-    padding-bottom: 24px;
-    display:inline-block;
-}
 
 .header-navigation {
     display: flex;
@@ -133,11 +125,14 @@ img {
 
 
 .header-menu-link {
+    padding-top: 24px;
+    display:inline-block;
     color: #2E2F42;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.50;
     letter-spacing: 0.02em;
+    position: relative;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -153,6 +148,9 @@ img {
 
 
 .header-address-link {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display:inline-block;
     color: #434455;
     font-size: 16px;
     font-weight: 400;
@@ -480,7 +478,6 @@ img {
     height: 40px;
     background-color: #4D5AE5; 
     border-radius: 50%;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -492,7 +489,7 @@ img {
     height: 100%;
     background-color: #4d5ae5; 
     border-radius: 50%;
-    
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -530,7 +527,7 @@ img {
     fill: #f4f4fd;
 }
 
-.header-menu-link::after {
+.header-menu-link::after { 
     content: "";
     display: block;
     width: 0%;
