--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,7 @@ img {
 
 .header-menu-link {
     padding-top: 24px;
+    padding-bottom: 24px;
     display:inline-block;
     color: #2E2F42;
     font-size: 16px;
@@ -534,7 +535,9 @@ img {
     height: 4px;
     background-color: #404BBF;
     border-radius: 2px; 
-    margin-top: 20px;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
 }
 
 .header-menu-item.active .header-menu-link::after {
