--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,7 @@ img {
     line-height: 1.50;
     letter-spacing: 0.02em;
     position: relative;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link:hover,
@@ -158,7 +158,7 @@ img {
     line-height: 1.50;
     letter-spacing: 0.02em;
     font-style: normal;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address-link:hover,
